# alpa

./: .gitignore  .mypy.ini  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  Containerfile  Makefile  README.md  alpa.spec  pyproject.toml  python-alpa-conf.spec
.github/workflows/: codeql.yml  deploy-to-pypi.yml  tests.yml
alpa/: cli.py  config.py  constants.py  exceptions.py  gh.py  git.py  github.py  helpers.py  messages.py  packit.py  repository.py  upstream_integration.py
alpa/cli/: alpa_repo.py  base.py  local_repo.py
alpa/config/: __init__.py  alpa_local.py  alpa_repo.py  base.py  local_config.py  metadata.py  packit.py
alpa/repository/: __init__.py  base.py  branch.py  subdirectory.py
alpa_conf/: __init__.py  alpa.py  config_base.py  constants.py  exceptions.py  metadata.py  packit.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/autodoc/: alpa.cli.rst
docs/source/topics/: alpa-actions.rst  alpa-cli-manual.rst  contributing.rst  first-package.rst  installation.rst  overview.rst  package-creation-tutorial.rst  package-data.rst  pre-commit-hooks.rst  release-monitoring.rst  repo-config-file.rst  repository-setup.rst
test/: config.py  constants.py  fake_alpa_repo.py  test_alpa.py  test_metadata.py  test_packit.py
test/integration/: test_cli.py  test_repository.py
test/unit/: test_alpa_repo_config.py  test_metadata_config.py  test_packit.py
