[tool.poetry]
name = "alpa-conf"
version = "0.4.1"
description = "Wrapper around configuration files for packit and alpa"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
maintainers = ["Jiří Kyjovský <j1.kyjovsky@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/alpa-team/alpa-conf"
repository = "https://github.com/alpa-team/alpa-conf"
exclude = ["test/"]


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = ">=5.0"
pydantic = ">=1.8"
email-validator = ">=1.0"


[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
pyfakefs = ">=4.0.0"
mypy = ">=0.900"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = ["pydantic.mypy"]
