[tool.poetry]
name = "pyalpa"
version = "0.6.0"
description = "Integration tool with Alpa repository"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
maintainers = ["Jiří Kyjovský <j1.kyjovsky@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/alpa-team/alpa"
repository = "https://github.com/alpa-team/alpa"
exclude = ["test/"]
packages = [{ include = "alpa" }]


[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.0"
gitpython = ">=3.0"
pygithub = ">=1.4"
pyyaml = ">=5.0"
specfile = ">=0.13.0"
pydantic = ">=1.8"
email-validator = ">=1.0"


[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
pyfakefs = ">=4.0.0"
mypy = ">=0.900"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
alpa = "alpa.cli.base:entry_point"


[tool.mypy]
plugins = ["pydantic.mypy"]
